--- a/service/service-hosp/src/main/resources/application.properties
+++ b/service/service-hosp/src/main/resources/application.properties
@@ -1,38 +1,37 @@
-# ????
 server.port=8201
-# ???
+# 服务名
 spring.application.name=service-hosp
 
-# ?????dev?test?prod
+# 环境设置：dev、test、prod
 spring.profiles.active=dev
 
-# mysql?????
+# mysql数据库连接
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/yygh_hosp?characterEncoding=utf-8&useSSL=false
+spring.datasource.url=jdbc:mysql://192.168.44.163:3306/yygh_hosp?characterEncoding=utf-8&useSSL=false
 spring.datasource.username=root
-spring.datasource.password=root123456
+spring.datasource.password=root123
 
-#??json???????
+#返回json的全局时间格式
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 spring.jackson.time-zone=GMT+8
 
-#??mapper xml?????
+#配置mapper xml文件的路径
 #mybatis-plus.mapper-locations=classpath:com/atguigu/yygh/mapper/xml/*.xml
 mybatis-plus.mapper-locations=classpath:com/atguigu/yygh/mapper/xml/*.xml
-# nacos????
+# nacos服务地址
 #spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
 #
-##??sentinel
+##开启sentinel
 #feign.sentinel.enabled=true
-##??sentinel??
+##设置sentinel地址
 #spring.cloud.sentinel.transport.dashboard=http://127.0.0.1:8858
 #
-##mongodb??
+##mongodb地址
 #spring.data.mongodb.host=192.168.44.163
 #spring.data.mongodb.port=27017
 #spring.data.mongodb.database=yygh_hosp
 #
-##rabbitmq??
+##rabbitmq地址
 #spring.rabbitmq.host=127.0.0.1
 #spring.rabbitmq.port=5672
 #spring.rabbitmq.username=guest
