--- a/service/service-hosp/src/main/resources/application.properties
+++ b/service/service-hosp/src/main/resources/application.properties
@@ -7,9 +7,9 @@ spring.profiles.active=dev
 
 # mysql数据库连接
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://192.168.44.163:3306/yygh_hosp?characterEncoding=utf-8&useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/yygh_hosp?characterEncoding=utf-8&useSSL=false
 spring.datasource.username=root
-spring.datasource.password=root123
+spring.datasource.password=root123456
 
 #返回json的全局时间格式
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
@@ -18,6 +18,8 @@ spring.jackson.time-zone=GMT+8
 #配置mapper xml文件的路径
 #mybatis-plus.mapper-locations=classpath:com/atguigu/yygh/mapper/xml/*.xml
 mybatis-plus.mapper-locations=classpath:com/atguigu/yygh/mapper/*.xml
+mybatis-plus.global-config.db-config.logic-delete-value=1
+mybatis-plus.global-config.db-config.logic-not-delete-value=0
 # nacos服务地址
 #spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
 #
